@@ -1,5 +1,10 @@
 2007-05-20  Xavier Claessens  <xclaesse@gmail.com>
 
+	* libempathy-gtk/gossip-chat-view.c: Correctly remember if last message
+	comes from the self contact or another.
+
+2007-05-20  Xavier Claessens  <xclaesse@gmail.com>
+
 	* libempathy-gtk/gossip-contact-list-model.c:
 	* libempathy-gtk/gossip-contact-list-model.h: Removed.
 	* libempathy-gtk/gossip-contact-list-view.c:
